force-app/main/default/objects/Opportunity/fields/Reduction__c.field-meta.xml
<CustomField>
    <fullName>Reduction__c</fullName>
    <formula>IF( Amount &gt; 5000, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>