force-app/main/default/objects/Opportunity/fields/Test_Rich__c.field-meta.xml
<CustomField>
    <fullName>Test_Rich__c</fullName>
    <label>Test Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>