force-app/main/default/objects/Opportunity/fields/Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Text__c</fullName>
    <label>Test Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>